Change mongodb connection string to mongodb compass connection string

--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 PORT=4040
-DATABASE=mongodb+srv://delz:<password>@cluster0.zacl9s2.mongodb.net/xpr
+DATABASE=mongodb://localhost:27017/
 DATABASE_PASSWORD=uN7Wo6kF2MYtLncl
 SALT=10
