Implement forgot password handler to reset password

--- a/config.env
+++ b/config.env
@@ -3,3 +3,5 @@ DATABASE=mongodb://localhost:27017/
 DATABASE_PASSWORD=uN7Wo6kF2MYtLncl
 SALT=10
 JWT_SECRET="Xet375Tdx!@45"
+EMAIL_USER=sundaymorenikeji175@gmail.com
+EMAIL_PASSWORD=AyeAxeMen7
