Implement role for the categories of users, "super-admin", "admin", and "customer"

--- a/config.env
+++ b/config.env
@@ -5,3 +5,4 @@ SALT=10
 JWT_SECRET="Xet375Tdx!@45"
 EMAIL_USERNAME=sundaymorenikeji175@gmail.com
 EMAIL_PASSWORD=prkgfjtoluberghq
+ACCESS_TOKEN_SECRET=gdhhsj4e!*TSx
